<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/iNputTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_text"
        android:autoSizeMaxTextSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:autoSizeMinTextSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/containerA"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_question_mark_24"
        app:layout_constraintEnd_toEndOf="@id/containerA"
        app:layout_constraintBottom_toTopOf="@id/containerA"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tutorialsButton"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/containerA"
        app:strokeColor="@color/black"
        android:layout_margin="10dp"
        app:strokeWidth="1dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintHeight_percent=".25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iNputTV">

        <EditText
            android:id="@+id/textInputET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_margin="10dp"
            android:gravity="top|start"
            android:hint="@string/enter_text_here"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluded_word_list_tap_to_add"
        app:layout_constraintTop_toBottomOf="@id/containerA"
        android:layout_margin="10dp"
        android:autoSizeMinTextSize="13sp"
        android:autoSizeMaxTextSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/containerA"
        android:id="@+id/addExcluded"/>

    <LinearLayout
        android:id="@+id/seekbarcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addExcluded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="start"
                android:autoSizeMaxTextSize="23sp"
                android:autoSizeMinTextSize="20sp"
                android:text="@string/deletion_percentage"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="13sp"
                android:autoSizeMinTextSize="15sp"
                android:text="0%"
                android:textColor="@color/black" />

        </LinearLayout>



        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:thumbTint="@color/black"
            android:backgroundTint="@color/black"
            android:max="100" />



    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/seekbarcontainer"
        app:layout_constraintTop_toBottomOf="@id/seekbarcontainer">


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate"
            android:textAllCaps="false"
            app:backgroundTint="@color/black"
            app:cornerRadius="0dp"
            android:id="@+id/generateBtn"/>

        <CheckBox
            android:id="@+id/preserveCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preserve_line_break"/>


    </LinearLayout>



    <TextView
        android:id="@+id/OUTPUTTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output_text"
        android:autoSizeMaxTextSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:autoSizeMinTextSize="13sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonholder"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/containerB"
        app:strokeColor="@color/black"
        android:layout_margin="10dp"
        app:strokeWidth="1dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintHeight_percent=".25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/OUTPUTTV">

        <EditText
            android:id="@+id/textOutputET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="top|start"
            android:hint="@string/enter_text_here"
            android:background="@null"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:text="@string/copy_output"
        app:backgroundTint="@color/black"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/containerB"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/copyBtn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/copyright_reserved"
        android:textAlignment="center"
        android:autoSizeMinTextSize="13sp"
        android:autoSizeMaxTextSize="15sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>